# tp-steganosaure

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
steganosaure/: __init__.py  array_reshaping.py  bits_manipulation.py  cli.py  image_io.py  steganography.py  string_conversion.py
tests/: conftest.py  test_array_reshaping.py  test_bits_manipulation.py  test_image_io.py  test_steganography.py  test_string_conversion.py
tests/images/: README.md
